<resources>
    <string name="app_name">HistGeo</string>
    <string name="password">Password:</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email:</string>
    <string name="already_have_an_account_with_us">Already have an account with us?</string>
    <string name="remember_me">Remember Me</string>
    <string name="dont_have_an_account">Don\'t Have an account with us?</string>
    <string name="login">Login</string>
    <string name="title_activity_gallery">galleryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_place">placeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_places">PlacesActivity</string>

    <string name="google_maps_key">AIzaSyAvd_kMHvP5sjSj9wOAVb-7NfhBNYzvmlQ</string>
    <string name="image_description">Image item in the carousel</string>
    <string name="confirm_password">Confirm Password\n</string>

</resources>